assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Kameron:wght@400..700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&family=Kameron:wght@400..700&display=swap');

body{
    padding:0;
    margin: 0;
    color: #EAEAEA;
    background-color: #050404;
    font-family: Kameron, Georgia, 'Times New Roman', Times, serif;
    font-size: 25px;
}

a {
    color: #EAEAEA;
}

/* Navigation */

.nav {
    width:100%;
    top:0;
    background-color: #893168;
    position: sticky;
    z-index: 100;
    font-family: Goldman, sans-serif;
}

.nav ul li {
    text-align: center;
    list-style-type: none;
    width: 20%; 
    padding-top: 30px;
    padding-bottom: 30px;
    font-size: 18pt;
}

.nav ul li:hover {
    background-color: #2E1C2B;
}

.nav ul li:hover a {
    
}

.nav ul li a {
    text-decoration: none;
    
}

.nav ul {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    padding: 0;
    margin: 0;
}

.subnav {
    display: none;
    background-color: #4A1942;
    top:100%;
    position: absolute;
    width: auto;
    width: 100%;
    z-index: 1;
}

.subnav ul {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0;
    margin: 0;
    list-style-type: none;
}

ul li:hover .subnav {
    display: block;
}

ul li {
    position: relative;
}

.nav .subnav ul li a {
    
}

.subnav ul li:hover {
    background-color: #2E1C2B;
}

.subnav ul li {
    width: 100%;
}

/* End of Navigation */

h1 {
    font-size: 3em;
}

h1, h2, h3 {
    font-family: Goldman, sans-serif;
}

main {
    max-width: 70%;
    margin: auto;
}

section {
    background-color: #4A1942;
}

#homeGrid { /* Homepage text block arrangement */
    display: grid;
    grid-template-columns: 1fr 3fr;
    column-gap: 50px;
}

#homeGrid h2 {
    background-color: #4A1942;
    display: grid;
    place-items: center;
    padding: 10px;
}

#homeGrid p {
    background-color: #4A1942;
    padding: 10px;
}

.imgCenter {
    display: block;
    margin: auto;
    width: 50%;
}

.imgCenter img{
    width: 100%;
}

.bigImgCenter {
    display: block;
    margin: auto;
    width: 90%;
}

.bigImgCenter img {
    width: 100%;
}

.tightText{
    max-width: 60%;
    margin: auto;
}

.pageTitle{
    margin-top: 25px;
    text-align: center;
}

.footer {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    padding: 10px;
    text-align: center;
    font-family: Goldman, sans-serif;
}

.crapCatsFooter {
    padding: 10px;
    text-align: center;
    font-family: Goldman, sans-serif
}

.cards {
    display: flex;
    gap: 20px;
    justify-content: center;
}

.card {
    border: 1px solid #ccc;
    border-radius: 10px;
    overflow: hidden;
    width: 300px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    text-align: center;
}

.card-img {
    width: 100%;
    height: 200px;
    object-fit: cover;
}

.card-content {
    padding: 15px;
}

.card-content h2 {
    font-size: 1.5rem;
    margin-bottom: 10px;
}

.card-content p {
    font-size: 1rem;
    color: #555;
}

/* Interactive Window Start */

.interactive {
    margin: auto;
    display: flex;
}

#cssInput {
    width: 50%;
    height: 100%;
    font-size: 20px;
}

.stylizedSpace {
    width: 50%;
}

#contrastInteractive {
    height: 300px;;
}

#contrastExample {
    text-align: center;
    padding: 100px 0px;
    font-family: Arial, Helvetica, sans-serif;
    overflow: hidden;

    /* Default values that are visible in the textarea for users to alter */
    color: darkblue;
    background-color: teal;
    font-size: 30px;
    font-weight: 900;
}

/* Interactive Window End */


/* Repetition examples */
#rep_examples{
    display: flex;
    color: #050404;
}

#rep_examples h1, #rep_examples h2, #rep_examples p {
    font-family: Arial, Helvetica, sans-serif;
}

#rep_examples h1 {
    font-size: 2rem;
    border-bottom: 2px solid #2E1C2B;
}

#rep_examples h2 {
    font-size: 1rem;
    margin: 0.5rem 1rem;
}

#rep_examples p {
    font-size: 0.5rem;
    max-width: 70%;
    margin: auto 2rem;
}

.rep_ex, #rep_examples section {
    margin: 1rem;
    padding: 0.5rem;
    background-color: #EAEAEA;
}

#wrong_1 {
    text-align: right;
}
#wrong_1 p{
    text-align: center;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

#wrong_2 {
    text-align: center;
    color: #893168;
}
#wrong_2 h2 {
    margin: .75rem;
}
#wrong_2 p{
    text-align: left;
    color: #050404;
}
/* End of repetition examples */

